# Wasm-Dynamic-Compiler

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
src/bytecode/: Instruction.h  Module.h  Type.h  Validation.h
src/codegen-llvm-instance/: EntityLayout.cc  InstanceTester.cc  LLVMCodege.h
src/mir/: ASTNode.h  BasicBlock.h  Instruction.h  MIRCodegen.h  MIRPrinter.h  Module.h
src/mir/passes/: Dominator.h  IsWellformed.h  Pass.h
src/parser/: ByteArrayReader.h  Delegate.h  DelegateEvents.defs  ExprBuilderDelegate.h  ModuleBuilderDelegate.h  Parser.h  Reader.h
src/parser/customsections/: Name.h
src/utility/: Commons.h
